add font family

--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year new mission</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="h-container">
+            <img src="../image/Banner Image.png" alt="new-year-bg" class="new-year-bg">
+            <p class="welcome">Happy New Year</p>
+            <h3 class="party">New Year Party</h3>
+            <h3 class="celebration">Celebration</h3>
+        </div>
+    </header>
 </body>
 </html>
