banner and discount section added

--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,34 @@
 </head>
 <body>
     <header>
-        <div class="h-container">
-            <img src="../image/Banner Image.png" alt="new-year-bg" class="new-year-bg">
-            <p class="welcome">Happy New Year</p>
-            <h3 class="party">New Year Party</h3>
-            <h3 class="celebration">Celebration</h3>
+        <section>
+        <div class="banner merriweather">
+            <h3 class="welcome">Happy New Year</h3>
+            <h2 class="party">New Year Party</h2>
+            <h2 class="party">Celibration</h2>
         </div>
-    </header>
+    </section>
+
+</header>
+
+    <section>
+        <div class="discount-container">
+            <h1 class="discount">65% OFF</h1>
+            <p class="discount-des">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h4 class="dis-content">ALL CATEGORIES</h4>
+            <img src="../image/New Year Photo.png" alt="New-year-photo" class="dis-pic">
+        </div>
+    </section>
+
+    <section class="party-section">
+        <div class="party-container">
+            <div class="party-content">
+                <h2 class="party-heading">Welcome to midnight party</h2>
+                <p class="party-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="party-btn">JOIN NOW</button>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
