party section added

--- a/html/index.html
+++ b/html/index.html
@@ -32,11 +32,11 @@
 
     <section class="party-section">
         <div class="party-container">
-            <div class="party-content">
-                <h2 class="party-heading">Welcome to midnight party</h2>
-                <p class="party-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <button class="party-btn">JOIN NOW</button>
-            </div>
+            <!-- <div class="party-content"> -->
+                <h2 class="party-heading">Welcome to <br> midnight party</h2>
+                <p class="party-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="party-btn">JOIN NOW</p>
+            <!-- </div> -->
         </div>
     </section>
     
