address section added

--- a/html/index.html
+++ b/html/index.html
@@ -32,12 +32,20 @@
 
     <section class="party-section">
         <div class="party-container">
-            <!-- <div class="party-content"> -->
+            <div class="party-content">
                 <h2 class="party-heading">Welcome to <br> midnight party</h2>
                 <p class="party-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <p class="party-btn">JOIN NOW</p>
-            <!-- </div> -->
+             </div>
+             <img src="../image/Group 70.png" alt="new-year-pic" class="new-year-logo">
         </div>
+    </section>
+
+    <section class="address">
+        <h3 class="add-details"><span class="add-colour">Place:</span> New Park Hotel</h3>
+        <h3 class="add-details"><span class="add-colour" > Date:</span> 31 December Night 2023</h3>
+        <h3 class="add-details"><span class="add-colour">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+        <buttom class="add-btn">JOIN NOW</buttom>
     </section>
     
 </body>
