--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
         <h3 class="add-details"><span class="add-colour">Time:</span> Evening 7.30 pm to 12.30 am</h3>
         <buttom class="add-btn">JOIN NOW</buttom>
     </section>
+
+    <section class="offer">
+        <div class="offer-container">
+            <div class="offer-semi-c1">
+                <h4 class="offer-greating">NEW BEST OFFER</h4>
+                <h2 class="coming-s">Coming Soon</h2>
+                <p class="offer-des">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="offer-semi-c2">
+                <!-- <img src="../image/Ellipse 1.png" alt="party-pic"> -->
+            </div>
+            <div class="offer-semi-c3">
+                <h2 class="year">2025</h2>
+                <p class="offer-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="../image/Group 96.png" alt="new-year-logo" class="happy-new-year">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
