address section added

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
             <div class="offer-semi-c1">
                 <h4 class="offer-greating">NEW BEST OFFER</h4>
                 <h2 class="coming-s">Coming Soon</h2>
-                <p class="offer-des">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="offer-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="offer-semi-c2">
-                <!-- <img src="../image/Ellipse 1.png" alt="party-pic"> -->
+            
+                 <img src="../image/Ellipse 1.png" alt="party-pic" class="new-party-p">
             </div>
             <div class="offer-semi-c3">
                 <h2 class="year">2025</h2>
