--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 </header>
 
+<main>
+
     <section>
         <div class="discount-container">
             <h1 class="discount">65% OFF</h1>
@@ -124,6 +126,41 @@
         </div>
         </div>
     </section>
+
+</main>
+
+<footer>
+    <div class="footer">
+        <div class="footer-c1">
+            <div class="contact1">
+                <p>44, Big Building Roosevelt Street <br> <br>
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div class="contact2">
+                <div class="mobile">
+                   <img src="/image/Call.png" alt="" class="mobile-logo">
+                    <div class="mobile-nbr">+00 123 584 124</div>
+                </div>
+                <br>
+                <div class="website mobile">
+                    <img src="/image/Website.png" alt="" class="web-logo">
+                 <div class="www">www.website.com</div>
+                </div>
+                
+            </div>
+        </div>
+        <div class="footer-c">
+            <img src="/image/Facebook.png" alt="" class="f-logo">
+            <img src="/image/Instagram.png" alt="" class="f-logo">
+            <img src="/image/Twitter.png" alt="" class="f-logo">
+            <img src="/image/Linkedin.png" alt="" class="f-logo">
+        </div>
+        <div class="footer-c1">
+            <h4 class="rights">2017, All Rights Reserved.</h4>
+            <p class=" rights">Unsubscribe</p>
+        </div>
+    </div>
+</footer>
     
 </body>
 </html>
