--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="party-section">
         <div class="party-container">
             <div class="party-content">
-                <h2 class="party-heading">Welcome to <br> midnight party</h2>
+                <h2 class="party-heading merriweather ">Welcome to <br> midnight party</h2>
                 <p class="party-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <p class="party-btn">JOIN NOW</p>
              </div>
@@ -53,7 +53,7 @@
         <div class="offer-container">
             <div class="offer-semi-c1">
                 <h4 class="offer-greating">NEW BEST OFFER</h4>
-                <h2 class="coming-s">Coming Soon</h2>
+                <h2 class="coming-s merriweather ">Coming Soon</h2>
                 <p class="offer-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="offer-semi-c2">
@@ -61,7 +61,7 @@
                  <img src="../image/Ellipse 1.png" alt="party-pic" class="new-party-p">
             </div>
             <div class="offer-semi-c3">
-                <h2 class="year">2025</h2>
+                <h2 class="year ">2025</h2>
                 <p class="offer-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                 <img src="../image/Group 96.png" alt="new-year-logo" class="happy-new-year">
             </div>
@@ -71,7 +71,7 @@
     <section class="holiday">
         <div class="holiday-offer">
             <h4 class="what-f">WHAT IS FUNCTIONAL</h4>
-            <h2 class="holiday-discount"> <span class="h-colour">Holidays</span> Sale 50%</h2>
+            <h2 class="holiday-discount merriweather "> <span class="h-colour">Holidays</span> Sale 50%</h2>
             <p class="holiday-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> 
                 molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit consectetur.</p>
        
@@ -99,7 +99,7 @@
     <section class="portfolio">
         <div class="portfolio-des-c">
             <h4 class="best-gift">THE BEST GIFTS</h4>
-            <h2 class="awsome-p">Our Awesome Portfolio</h2>
+            <h2 class="awsome-p merriweather ">Our Awesome Portfolio</h2>
             <p class="portfolio-des offer-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         </div>
         <div class="portfolio-content-c">
@@ -126,7 +126,7 @@
     <section>
         <div class="subscribe">
             <img src="/image/Group 61.png" alt="" class="s-logo">
-            <h2 class="s-newl awsome-p ">Subscribe Newsletter</h2>
+            <h2 class="s-newl awsome-p merriweather ">Subscribe Newsletter</h2>
             <p class="s-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <div class="email">
             <input type="email" placeholder="user@gmail.com" class="email-input" required>
